--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>News App Demo</title>
+    <link rel="stylesheet" href="/assets/style.css">
+</head>
+<body>
 <main>
     <header>
         <a class="logo" href="/">News Demo</a>
@@ -5,7 +15,28 @@
             <input autofocus class="search-input" value=""
                    placeholder="Enter a news topic" type="search" name="q">
         </form>
-        <a href="https://github.com/freshman-tech/news" class="button
+        <a href="https://github.com/sngzv/web-app-sample" class="button
       github-button">View on Github</a>
     </header>
+    <section class="container">
+        <ul class="search-results">
+            {{ range .Results.Articles }}
+            <li class="news-article">
+                <div>
+                    <a target="_blank" rel="noreferrer noopener" href="{{.URL}}">
+                        <h3 class="title">{{.Title }}</h3>
+                    </a>
+                    <p class="description">{{ .Description }}</p>
+                    <div class="metadata">
+                        <p class="source">{{ .Source.Name }}</p>
+                        <time class="published-date">{{ .PublishedAt }}</time>
+                    </div>
+                </div>
+                <img class="article-image" src="{{ .URLToImage }}">
+            </li>
+            {{ end }}
+        </ul>
+    </section>
 </main>
+</body>
+</html>
