--- a/index.html
+++ b/index.html
@@ -12,13 +12,20 @@
     <header>
         <a class="logo" href="/">News Demo</a>
         <form action="/search" method="GET">
-            <input autofocus class="search-input" value=""
+            <input autofocus class="search-input" value="{{ .SearchKey }}"
                    placeholder="Enter a news topic" type="search" name="q">
         </form>
         <a href="https://github.com/sngzv/web-app-sample" class="button
       github-button">View on Github</a>
     </header>
     <section class="container">
+        <div class="result-count">
+            {{ if (gt .Results.TotalResults 0)}}
+            <p>About <strong>{{ .Results.TotalResults }}</strong> results were found. You are on page <strong>{{ .CurrentPage }}</strong> of <strong> {{ .TotalPages }}</strong>.</p>
+            {{ else if (ne .SearchKey "") and (eq .Results.TotalResults 0) }}
+            <p>No results found for your query: <strong>{{ .SearchKey }}</strong>.</p>
+            {{ end }}
+        </div>
         <ul class="search-results">
             {{ range .Results.Articles }}
             <li class="news-article">
@@ -29,13 +36,21 @@
                     <p class="description">{{ .Description }}</p>
                     <div class="metadata">
                         <p class="source">{{ .Source.Name }}</p>
-                        <time class="published-date">{{ .PublishedAt }}</time>
+                        <time class="published-date">{{ .FormatPublishedDate }}</time>
                     </div>
                 </div>
                 <img class="article-image" src="{{ .URLToImage }}">
             </li>
             {{ end }}
         </ul>
+        <div class="pagination">
+            {{ if (gt .NextPage 2) }}
+            <a href="/search?q={{ .SearchKey }}&page={{ .PreviousPage }}" class="button previous-page">Previous</a>
+            {{ end }}
+            {{ if (ne .IsLastPage true) }}
+            <a href="/search?q={{ .SearchKey }}&page={{ .NextPage }}" class="button next-page">Next</a>
+            {{ end }}
+        </div>
     </section>
 </main>
 </body>
